# CPBS7601

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  README.md  SYLLABUS.md
hands_on/: README.md
lectures/: README.md
lectures/10.hpc_and_parallel_compute/: README.md  SLURM_cheatsheet.md
lectures/2.version_control/: on_the_fly_githubtutorial_contents.txt
lectures/3.environments/: jupyter_environment.yml  jupyter_walkthrough.ipynb
lectures/4.data_wrangling/: pandas_example.ipynb  tidyverse_example.ipynb
lectures/5.workflows/: README.md  example_bash_workflow.sh  snakefile  snakemake_environment.yml
lectures/6.data_visualization/: ggplot2_tutorial.ipynb  ggplot_themes.R
lectures/7.interactive_data_analysis/: app.R
lectures/8.documentation_readability/: example_code.R  example_code.py
lectures/9.software_packaging/python_packaging_with_poetry/: README.md  pyproject.toml
lectures/9.software_packaging/python_packaging_with_poetry/cpbs7601/: pyproject.toml
materials/: README.md
materials/01.introduction/: lecture01_hands-on_experimental_design.md
materials/02.version_control/: lecture02_hands-on_github.md
materials/03.environments/: cpbs7601_environment.yml  jupyter_environment.yml  jupyter_walkthrough.ipynb  lecture03_hands-on_conda.md
materials/04.data_wrangling/: lecture04_hands-on_datawrangling.md  pandas_example.ipynb  tidyverse_example.ipynb
materials/05.workflows/: example_bash_workflow.sh  lecture05_assignment_snakemake.md  snakefile
materials/06.data_visualization/: ggplot2_tutorial.ipynb  (+1 more)
(+69 files in other folders)
